@@ -40,11 +40,11 @@
            <class>com.jgoodies.forms.layout.FormLayout</class> 
            <void method="setProperty"> 
             <string>$columnSpecs</string> 
-            <string>default, labelcompgap, default:grow</string> 
+            <string>default, labelcompgap, default, labelcompgap, default:grow</string> 
            </void> 
            <void method="setProperty"> 
             <string>$rowSpecs</string> 
-            <string>default, linegap, fill:default:grow, linegap, default</string> 
+            <string>default, linegap, fill:default:grow, linegap, default, linegap, default</string> 
            </void> 
           </object> 
           <void property="name"> 
@@ -83,11 +83,30 @@
             </void> 
             <void method="setProperty"> 
              <string>gridWidth</string> 
-             <int>3</int> 
+             <int>5</int> 
             </void> 
             <void method="setProperty"> 
              <string>hAlign</string> 
              <object class="com.jgoodies.forms.layout.CellConstraints" field="DEFAULT"/> 
+            </void> 
+           </object> 
+          </void> 
+          <void method="add"> 
+           <object class="com.jformdesigner.model.FormComponent"> 
+            <string>javax.swing.JLabel</string> 
+            <void method="setProperty"> 
+             <string>text</string> 
+             <string>Input text:</string> 
+            </void> 
+            <void property="name"> 
+             <string>label1</string> 
+            </void> 
+           </object> 
+           <object class="com.jformdesigner.model.FormLayoutConstraints"> 
+            <class>com.jgoodies.forms.layout.CellConstraints</class> 
+            <void method="setProperty"> 
+             <string>gridWidth</string> 
+             <int>5</int> 
             </void> 
            </object> 
           </void> 
@@ -112,6 +131,10 @@
              <string>gridY</string> 
              <int>5</int> 
             </void> 
+            <void method="setProperty"> 
+             <string>hAlign</string> 
+             <object class="com.jgoodies.forms.layout.CellConstraints" field="RIGHT"/> 
+            </void> 
            </object> 
           </void> 
           <void method="add"> 
@@ -131,6 +154,10 @@
              <string>gridY</string> 
              <int>5</int> 
             </void> 
+            <void method="setProperty"> 
+             <string>gridWidth</string> 
+             <int>3</int> 
+            </void> 
            </object> 
           </void> 
           <void method="add"> 
@@ -138,17 +165,61 @@
             <string>javax.swing.JLabel</string> 
             <void method="setProperty"> 
              <string>text</string> 
-             <string>Input text:</string> 
+             <string>Line Endings:</string> 
             </void> 
             <void property="name"> 
-             <string>label1</string> 
+             <string>label3</string> 
             </void> 
            </object> 
            <object class="com.jformdesigner.model.FormLayoutConstraints"> 
             <class>com.jgoodies.forms.layout.CellConstraints</class> 
             <void method="setProperty"> 
-             <string>gridWidth</string> 
+             <string>gridX</string> 
+             <int>1</int> 
+            </void> 
+            <void method="setProperty"> 
+             <string>gridY</string> 
+             <int>7</int> 
+            </void> 
+            <void method="setProperty"> 
+             <string>hAlign</string> 
+             <object class="com.jgoodies.forms.layout.CellConstraints" field="RIGHT"/> 
+            </void> 
+           </object> 
+          </void> 
+          <void method="add"> 
+           <object class="com.jformdesigner.model.FormComponent"> 
+            <string>javax.swing.JComboBox</string> 
+            <void method="setProperty"> 
+             <string>model</string> 
+             <object class="javax.swing.DefaultComboBoxModel"> 
+              <void property="selectedItem"> 
+               <string>Unix (LF)</string> 
+              </void> 
+              <void method="addElement"> 
+               <string>Unix (LF)</string> 
+              </void> 
+              <void method="addElement"> 
+               <string>Mac (CR)</string> 
+              </void> 
+              <void method="addElement"> 
+               <string>Windows (CRLF)</string> 
+              </void> 
+             </object> 
+            </void> 
+            <void property="name"> 
+             <string>eolCombo</string> 
+            </void> 
+           </object> 
+           <object class="com.jformdesigner.model.FormLayoutConstraints"> 
+            <class>com.jgoodies.forms.layout.CellConstraints</class> 
+            <void method="setProperty"> 
+             <string>gridX</string> 
              <int>3</int> 
+            </void> 
+            <void method="setProperty"> 
+             <string>gridY</string> 
+             <int>7</int> 
             </void> 
            </object> 
           </void> 
