@@ -1,9 +1,14 @@
 
 Version 1.0b6 -
 
+- added line endings preferences in debugger input text dialog and interpreter panel
 - read now the token vocab file from the output path (in addition to the default grammar location)
 - output path is now specified in the preferences
 - alert after checking grammar
+- added shift-delete to behave like delete when typing with the shift key pressed
+- fixed a bug that prevented some DFA diagram from being completely displayed (scrollable zone too small)
+- fixed a bug in the syntax coloring parser when a multi-line comment where located at the end of file
+- fixed a bug where some menu items were not disabled in debug mode
 
 Version 1.0b5 - 10/22/06
 
